2006-05-10  Adam Piatyszek  <ediap@users.sourceforge.net>

	* test/Makefile.am: Added a dirty hack using sed regular expresion
	that ensures floating point output in the form of `e-06' instead
	of `e-006', which is default for the MinGW compiler.

	* configure.ac: Check for a host added, which is used to disable
	building of a shared library on Windows based platforms.

2006-05-09  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/config_msvc.h: Manually updated the config header for
	MSVC++ .NET with MKL.

	* itpp/base/timing.cpp: Fixed gettimeofday() function definition
	for Windows based platforms (MinGW, MSVC++). No need for MINGW
	definition any more.

	* configure.ac, itpp/base/elmatfunc.cpp, itpp/base/elmatfunc.h:
	Added checks for `lgamma' and `tgamma' functions, and `signgam'
	declaration. This solves problems on some platforms where these
	declaration and/or functions are not available.

	* itpp/base/random.cpp: Added missing include file (undefined
	gamma function).

	* configure.ac, Makefile.am, tests/Makefile.am: Fixed a problem
	with different line endings on Windows based platforms. Now,
	sed program is necessary for performing tests.

2006-05-08  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/cblas.cpp: Fixed bug [1483125]. Now a complex dot
	product is properly returned by a dot function when using ACML
	blas libraries. Thanks to Danilo Zanatta for this bug report.

2006-05-04  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/itmex.h: Fixed missing std:: specifiers before complex<>
	types.

2006-05-03  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/logexpfunc.h, itpp/base/matfunc.h,
	itpp/base/specmat.cpp, itpp/comm/channel.cpp,
	itpp/comm/modulator.cpp, itpp/signal/sigfun.cpp,
	itpp/signal/transforms.cpp, itpp/srccode/vq.h: 
	Fixed bug [1480535]. Now needed_bits() returns a proper number of
	bits required to represent integer `n', e.g. "needed_bits(0) = 1", 
	"needed_bits(7) = 3" and "needed_bits(8) = 4".
