@@ -1,16 +1,16 @@
             Source              sim mean               sim var
 ============================================================================
-           Uniform              0.501589             0.0835536
-       Exponential                1.0042               1.01358
-            Normal            -0.0024791              0.997706
-           Weibull               1.00252               1.01146
-          Rayleigh               1.25436              0.430377
-         I_Uniform               5.50324               2.92492
-        AR1_Normal               1.98411              0.973958
-    Complex_Normal           -0.00263507+0.00636764i              0.993736
-              Sine                     0              0.500005
-            Square                 2e-05               1.00001
-          Triangle                     0              0.333337
-          Sawtooth                0.0002              0.333337
-           Impulse               0.00019           0.000189966
-           Pattern                     2               1.00001
+           Uniform              0.501589              0.083554
+       Exponential              1.004199              1.013575
+            Normal             -0.002479              0.997706
+           Weibull              1.002523              1.011465
+          Rayleigh              1.254365              0.430377
+         I_Uniform              5.503240              2.924919
+        AR1_Normal              1.984106              0.973958
+    Complex_Normal             -0.002635+0.006368i              0.993736
+              Sine              0.000000              0.500005
+            Square              0.000020              1.000010
+          Triangle              0.000000              0.333337
+          Sawtooth              0.000200              0.333337
+           Impulse              0.000190              0.000190
+           Pattern              2.000000              1.000010
