@@ -7,7 +7,7 @@ hanning(32) = [0.00903565 0.035816 0.0793732 0.138133 0.209972 0.292292 0.382121
 hanning(128) = [0.000592972 0.00237048 0.00532832 0.00945946 0.0147541 0.0211997 0.028781 0.0374799 0.0472759 0.0581457 0.0700635 0.0830011 0.0969278 0.11181 0.127614 0.144301 0.161831 0.180163 0.199255 0.219059 0.23953 0.260618 0.282275 0.304448 0.327084 0.350131 0.373533 0.397236 0.421181 0.445314 0.469577 0.493912 0.518261 0.542567 0.566772 0.590818 0.61465 0.638209 0.66144 0.684289 0.7067 0.728621 0.75 0.770786 0.790929 0.810383 0.8291 0.847037 0.864151 0.880401 0.895748 0.910157 0.923593 0.936025 0.947422 0.957758 0.967008 0.975151 0.982166 0.988038 0.992752 0.996298 0.998666 0.999852 0.999852 0.998666 0.996298 0.992752 0.988038 0.982166 0.975151 0.967008 0.957758 0.947422 0.936025 0.923593 0.910157 0.895748 0.880401 0.864151 0.847037 0.8291 0.810383 0.790929 0.770786 0.75 0.728621 0.7067 0.684289 0.66144 0.638209 0.61465 0.590818 0.566772 0.542567 0.518261 0.493912 0.469577 0.445314 0.421181 0.397236 0.373533 0.350131 0.327084 0.304448 0.282275 0.260618 0.23953 0.219059 0.199255 0.180163 0.161831 0.144301 0.127614 0.11181 0.0969278 0.0830011 0.0700635 0.0581457 0.0472759 0.0374799 0.028781 0.0211997 0.0147541 0.00945946 0.00532832 0.00237048 0.000592972]
 hann(32) = [0 0.010235 0.0405211 0.0896183 0.155517 0.235518 0.326347 0.424286 0.525325 0.625326 0.720197 0.806053 0.879379 0.937173 0.97707 0.997435 0.997435 0.97707 0.937173 0.879379 0.806053 0.720197 0.625326 0.525325 0.424286 0.326347 0.235518 0.155517 0.0896183 0.0405211 0.010235 0]
 hann(128) = [0 0.000611792 0.00244567 0.00549715 0.00975876 0.0152201 0.0218677 0.0296854 0.0386541 0.0487517 0.0599537 0.0722325 0.0855581 0.0998979 0.115217 0.131477 0.14864 0.166662 0.1855 0.205108 0.225437 0.246438 0.26806 0.290249 0.312952 0.336112 0.359673 0.383578 0.407768 0.432183 0.456764 0.481452 0.506184 0.530901 0.555543 0.580049 0.604359 0.628414 0.652154 0.675522 0.69846 0.720913 0.742825 0.764143 0.784815 0.804789 0.824018 0.842454 0.860052 0.876768 0.892563 0.907397 0.921234 0.93404 0.945784 0.956437 0.965973 0.974369 0.981603 0.98766 0.992523 0.99618 0.998624 0.999847 0.999847 0.998624 0.99618 0.992523 0.98766 0.981603 0.974369 0.965973 0.956437 0.945784 0.93404 0.921234 0.907397 0.892563 0.876768 0.860052 0.842454 0.824018 0.804789 0.784815 0.764143 0.742825 0.720913 0.69846 0.675522 0.652154 0.628414 0.604359 0.580049 0.555543 0.530901 0.506184 0.481452 0.456764 0.432183 0.407768 0.383578 0.359673 0.336112 0.312952 0.290249 0.26806 0.246438 0.225437 0.205108 0.1855 0.166662 0.14864 0.131477 0.115217 0.0998979 0.0855581 0.0722325 0.0599537 0.0487517 0.0386541 0.0296854 0.0218677 0.0152201 0.00975876 0.00549715 0.00244567 0.000611792 0]
-blackman(32) = [-1.38778e-17 0.00375165 0.0156384 0.0374027 0.0714646 0.120286 0.185647 0.267955 0.365735 0.475379 0.591229 0.706001 0.811493 0.89949 0.962731 0.995797 0.995797 0.962731 0.89949 0.811493 0.706001 0.591229 0.475379 0.365735 0.267955 0.185647 0.120286 0.0714646 0.0374027 0.0156384 0.00375165 -1.38778e-17]
-blackman(128) = [-1.38778e-17 0.000220485 0.000884269 0.00199831 0.0035741 0.00562748 0.00817842 0.0112507 0.0148717 0.0190717 0.0238838 0.0293429 0.0354858 0.0423502 0.049974 0.0583951 0.0676504 0.0777751 0.0888026 0.100763 0.113683 0.127586 0.142489 0.158406 0.175343 0.193302 0.212276 0.232253 0.253212 0.275127 0.297961 0.321672 0.346209 0.371513 0.397518 0.42415 0.451329 0.478967 0.506971 0.535239 0.563668 0.592147 0.620562 0.648797 0.676731 0.704243 0.73121 0.75751 0.783019 0.807619 0.83119 0.853619 0.874794 0.89461 0.912966 0.929771 0.944936 0.958385 0.970046 0.97986 0.987773 0.993745 0.997744 0.999749 0.999749 0.997744 0.993745 0.987773 0.97986 0.970046 0.958385 0.944936 0.929771 0.912966 0.89461 0.874794 0.853619 0.83119 0.807619 0.783019 0.75751 0.73121 0.704243 0.676731 0.648797 0.620562 0.592147 0.563668 0.535239 0.506971 0.478967 0.451329 0.42415 0.397518 0.371513 0.346209 0.321672 0.297961 0.275127 0.253212 0.232253 0.212276 0.193302 0.175343 0.158406 0.142489 0.127586 0.113683 0.100763 0.0888026 0.0777751 0.0676504 0.0583951 0.049974 0.0423502 0.0354858 0.0293429 0.0238838 0.0190717 0.0148717 0.0112507 0.00817842 0.00562748 0.0035741 0.00199831 0.000884269 0.000220485 -1.38778e-17]
+blackman(32) = [0 0.00375165 0.0156384 0.0374027 0.0714646 0.120286 0.185647 0.267955 0.365735 0.475379 0.591229 0.706001 0.811493 0.89949 0.962731 0.995797 0.995797 0.962731 0.89949 0.811493 0.706001 0.591229 0.475379 0.365735 0.267955 0.185647 0.120286 0.0714646 0.0374027 0.0156384 0.00375165 0]
+blackman(128) = [0 0.000220485 0.000884269 0.00199831 0.0035741 0.00562748 0.00817842 0.0112507 0.0148717 0.0190717 0.0238838 0.0293429 0.0354858 0.0423502 0.049974 0.0583951 0.0676504 0.0777751 0.0888026 0.100763 0.113683 0.127586 0.142489 0.158406 0.175343 0.193302 0.212276 0.232253 0.253212 0.275127 0.297961 0.321672 0.346209 0.371513 0.397518 0.42415 0.451329 0.478967 0.506971 0.535239 0.563668 0.592147 0.620562 0.648797 0.676731 0.704243 0.73121 0.75751 0.783019 0.807619 0.83119 0.853619 0.874794 0.89461 0.912966 0.929771 0.944936 0.958385 0.970046 0.97986 0.987773 0.993745 0.997744 0.999749 0.999749 0.997744 0.993745 0.987773 0.97986 0.970046 0.958385 0.944936 0.929771 0.912966 0.89461 0.874794 0.853619 0.83119 0.807619 0.783019 0.75751 0.73121 0.704243 0.676731 0.648797 0.620562 0.592147 0.563668 0.535239 0.506971 0.478967 0.451329 0.42415 0.397518 0.371513 0.346209 0.321672 0.297961 0.275127 0.253212 0.232253 0.212276 0.193302 0.175343 0.158406 0.142489 0.127586 0.113683 0.100763 0.0888026 0.0777751 0.0676504 0.0583951 0.049974 0.0423502 0.0354858 0.0293429 0.0238838 0.0190717 0.0148717 0.0112507 0.00817842 0.00562748 0.0035741 0.00199831 0.000884269 0.000220485 0]
 triang(32) = [0.03125 0.09375 0.15625 0.21875 0.28125 0.34375 0.40625 0.46875 0.53125 0.59375 0.65625 0.71875 0.78125 0.84375 0.90625 0.96875 0.96875 0.90625 0.84375 0.78125 0.71875 0.65625 0.59375 0.53125 0.46875 0.40625 0.34375 0.28125 0.21875 0.15625 0.09375 0.03125]
 triang(128) = [0.0078125 0.0234375 0.0390625 0.0546875 0.0703125 0.0859375 0.101562 0.117188 0.132812 0.148438 0.164062 0.179688 0.195312 0.210938 0.226562 0.242188 0.257812 0.273438 0.289062 0.304688 0.320312 0.335938 0.351562 0.367188 0.382812 0.398438 0.414062 0.429688 0.445312 0.460938 0.476562 0.492188 0.507812 0.523438 0.539062 0.554688 0.570312 0.585938 0.601562 0.617188 0.632812 0.648438 0.664062 0.679688 0.695312 0.710938 0.726562 0.742188 0.757812 0.773438 0.789062 0.804688 0.820312 0.835938 0.851562 0.867188 0.882812 0.898438 0.914062 0.929688 0.945312 0.960938 0.976562 0.992188 0.992188 0.976562 0.960938 0.945312 0.929688 0.914062 0.898438 0.882812 0.867188 0.851562 0.835938 0.820312 0.804688 0.789062 0.773438 0.757812 0.742188 0.726562 0.710938 0.695312 0.679688 0.664062 0.648438 0.632812 0.617188 0.601562 0.585938 0.570312 0.554688 0.539062 0.523438 0.507812 0.492188 0.476562 0.460938 0.445312 0.429688 0.414062 0.398438 0.382812 0.367188 0.351562 0.335938 0.320312 0.304688 0.289062 0.273438 0.257812 0.242188 0.226562 0.210938 0.195312 0.179688 0.164062 0.148438 0.132812 0.117188 0.101562 0.0859375 0.0703125 0.0546875 0.0390625 0.0234375 0.0078125]
